--- a/main.css
+++ b/main.css
@@ -16,3 +16,9 @@ body{
   align-items: center;
 }
 
+.footer-form{
+  background-color: red;
+  font-size: 10px;
+  line-height: 15px;
+  margin-top: 60px;
+}
