--- a/main.css
+++ b/main.css
@@ -9,3 +9,23 @@ body{
   font-size: 16px;
   line-height: 18px;
 }
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.footer{
+  font-size: 30px;
+  background-color: red;
+  display: flex;
+  margin: 0 auto;
+}
+
+.footer-wrap{
+  font-size: larger;
+  border: rebeccapurple;
+  flood-color: aqua;
+}
